# loputon-laiskuus

./: .gitignore  README.md  loputon-laiskuus.cabal  ratkaisu-tpe.des3
dojo/: Block.hs  Bloxorz.hs  Levels.hs  Main.hs  Terrain.hs  Tester.hs  UnitTests.hs
kalvot/: index.html
src/: Block.hs  Bloxorz.hs  Terrain.hs  Tester.hs
tests/: UnitTests.hs
