name:                loputon-laiskuus
version:             0.1.0.0
synopsis:            Endless lazyness
homepage:            https://gitlab.com/monadoy/loputon-laiskuus
author:              The Loputon Laiskuus dev team
build-type:          Simple
cabal-version:       >=1.10

executable loputon-laiskuus
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      dojo
  default-language:    Haskell2010
