name:                loputon-laiskuus
version:             0.1.0.0
synopsis:            Endless lazyness
homepage:            https://gitlab.com/monadoy/loputon-laiskuus
author:              The Loputon Laiskuus dev team
build-type:          Simple
cabal-version:       >=1.10

test-suite unit-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends: base, vector, containers, HUnit >=1.6
  hs-source-dirs: dojo
  default-language: Haskell2010
  other-modules: UnitTests Block Bloxorz Levels Terrain
