name:                loputon-laiskuus
version:             0.1.0.0
synopsis:            Endless lazyness
homepage:            https://gitlab.com/monadoy/loputon-laiskuus
author:              The Loputon Laiskuus dev team
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Block Bloxorz Levels Terrain
  build-depends:
      base
    , vector
    , containers
  default-language: Haskell2010

test-suite unit-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: UnitTests.hs
  build-depends:
      loputon-laiskuus
    , base
    , containers
    , HUnit
    , test-framework
    , test-framework-hunit
  default-language: Haskell2010
